[gd_scene load_steps=6 format=3 uid="uid://dqpcjvb6dyefm"]

[ext_resource type="Script" path="res://scripts/mushroom.gd" id="1_qnr27"]
[ext_resource type="Texture2D" uid="uid://by08p6ssbemun" path="res://assets/mush in cage.png" id="2_ilin3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8gx1l"]
radius = 48.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5t81"]
size = Vector2(64, 64)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mlpo1"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0.531248, 0.828438, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="mushroom" type="CharacterBody2D"]
script = ExtResource("1_qnr27")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ilin3")

[node name="View" type="Area2D" parent="."]

[node name="ViewArea" type="CollisionShape2D" parent="View"]
shape = SubResource("CircleShape2D_8gx1l")

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_t5t81")

[node name="TextBox" type="Panel" parent="."]
visible = false
offset_left = -64.0
offset_top = -80.0
offset_right = 64.0
offset_bottom = -40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mlpo1")

[node name="Label" type="Label" parent="TextBox"]
layout_mode = 0
offset_left = 10.0
offset_right = 118.0
offset_bottom = 43.0
theme_override_font_sizes/font_size = 12
text = "Insert Text Here LoL"
autowrap_mode = 2

[connection signal="body_entered" from="View" to="." method="_on_view_body_entered"]
[connection signal="body_exited" from="View" to="." method="_on_view_body_exited"]
